2.1.0/_sources/gallery/lines_bars_and_markers/line_styles_reference.rst.txt


.. _sphx_glr_gallery_lines_bars_and_markers_line_styles_reference.py:


====================
Line-style reference
====================

Reference for line-styles included with Matplotlib.




.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_line_styles_reference_001.png
    :align: center





.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt


    color = 'cornflowerblue'
    points = np.ones(5)  # Draw 5 points for each line
    text_style = dict(horizontalalignment='right', verticalalignment='center',
                      fontsize=12, fontdict={'family': 'monospace'})


    def format_axes(ax):
        ax.margins(0.2)
        ax.set_axis_off()


    def nice_repr(text):
        return repr(text).lstrip('u')


    # Plot all line styles.
    fig, ax = plt.subplots()

    linestyles = ['-', '--', '-.', ':']
    for y, linestyle in enumerate(linestyles):
        ax.text(-0.1, y, nice_repr(linestyle), **text_style)
        ax.plot(y * points, linestyle=linestyle, color=color, linewidth=3)
        format_axes(ax)
        ax.set_title('line styles')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.023 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: line_styles_reference.py <line_styles_reference.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: line_styles_reference.ipynb <line_styles_reference.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
